applications/tekton/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  rules:
  - host: tekton.d20789c5145d401ea870.francecentral.aksapp.io
    http:
      paths:
      - backend:
          serviceName: tekton-dashboard
          servicePort: 9097
        path: /
